// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contracts.vue > Should display a warning message for free users with 10 contracts 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat mb-4" role="alert" style="">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!---->Free plan users are limited to 10 synced contracts. Remove some contracts or <a data-v-1ff93dc2=""><span class="text-white text-decoration-underline font-weight-bold">upgrade</span></a> to the Premium plan for more.
        </div>
        <!---->
        <!---->
      </div>
      <import-contract-modal-stub></import-contract-modal-stub>
      <remove-contract-confirmation-modal-stub></remove-contract-confirmation-modal-stub>
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" sort-desc="true" item-key="address">
        <div class="d-flex justify-end"><button type="button" class="v-btn v-theme--light bg-primary v-btn--density-default v-btn--size-small v-btn--variant-flat mr-2" style="max-width: 175px;"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-import mdi v-icon notranslate v-theme--light v-icon--size-small mr-1" aria-hidden="true"></i>Import Contract </span>
            <!---->
            <!---->
          </button></div>
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Deployed On</span><i class="mdi-arrow-down mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span><!----></span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x0" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x0</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-8"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x1" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x1</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-10"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x2" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x2</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-12"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x3" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x3</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-14"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x4" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x4</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-16"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x5" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x5</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-18"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x6" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x6</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-20"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x7" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x7</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-22"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x8" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x8</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-24"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x9" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x9</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-26"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-3">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-1" aria-describedby="input-1-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>1-10 of 11</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Last page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Contracts.vue > Should not display a warning message for premium users with 10 contracts 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat mb-4" role="alert" style="display: none;">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!---->Free plan users are limited to 10 synced contracts. Remove some contracts or <a data-v-1ff93dc2=""><span class="text-white text-decoration-underline font-weight-bold">upgrade</span></a> to the Premium plan for more.
        </div>
        <!---->
        <!---->
      </div>
      <import-contract-modal-stub></import-contract-modal-stub>
      <remove-contract-confirmation-modal-stub></remove-contract-confirmation-modal-stub>
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" sort-desc="true" item-key="address">
        <div class="d-flex justify-end"><button type="button" class="v-btn v-theme--light bg-primary v-btn--density-default v-btn--size-small v-btn--variant-flat mr-2" style="max-width: 175px;"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-import mdi v-icon notranslate v-theme--light v-icon--size-small mr-1" aria-hidden="true"></i>Import Contract </span>
            <!---->
            <!---->
          </button></div>
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Deployed On</span><i class="mdi-arrow-down mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span><!----></span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x0" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x0</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-8"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x1" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x1</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-10"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x2" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x2</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-12"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x3" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x3</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-14"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x4" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x4</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-16"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x5" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x5</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-18"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x6" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x6</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-20"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x7" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x7</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-22"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x8" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x8</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-24"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x9" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x9</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-26"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-3">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-1" aria-describedby="input-1-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>1-10 of 11</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Last page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Contracts.vue > Should not display a warning message for public explorers 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat mb-4" role="alert" style="display: none;">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!---->Free plan users are limited to 10 synced contracts. Remove some contracts or <a data-v-1ff93dc2=""><span class="text-white text-decoration-underline font-weight-bold">upgrade</span></a> to the Premium plan for more.
        </div>
        <!---->
        <!---->
      </div>
      <import-contract-modal-stub></import-contract-modal-stub>
      <remove-contract-confirmation-modal-stub></remove-contract-confirmation-modal-stub>
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" sort-desc="true" item-key="address">
        <div class="d-flex justify-end"><button type="button" class="v-btn v-theme--light bg-primary v-btn--density-default v-btn--size-small v-btn--variant-flat mr-2" style="max-width: 175px;"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-import mdi v-icon notranslate v-theme--light v-icon--size-small mr-1" aria-hidden="true"></i>Import Contract </span>
            <!---->
            <!---->
          </button></div>
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Deployed On</span><i class="mdi-arrow-down mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span><!----></span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x0" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x0</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-8"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x1" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x1</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-10"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x2" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x2</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-12"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x3" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x3</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-14"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x4" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x4</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-16"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x5" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x5</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-18"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x6" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x6</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-20"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x7" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x7</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-22"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x8" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x8</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-24"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x9" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">0x9</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-26"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"><button type="button" class="v-btn v-btn--icon v-theme--light text-error v-btn--density-default v-btn--size-x-small v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-delete mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-3">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-1" aria-describedby="input-1-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>1-10 of 11</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Last page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Contracts.vue > Should show the contracts list 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" sort-desc="true" item-key="address">
        <!---->
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Deployed On</span><i class="mdi-arrow-down mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x0" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">My Contract</td>
                <td class="v-data-table__td v-data-table-column--align-start"><span aria-describedby="v-tooltip-7"></span>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x1" contract="[object Object]" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">Another Contract</td>
                <td class="v-data-table__td v-data-table-column--align-start">
                  <!--v-if-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
                <td class="v-data-table__td v-data-table-column--align-start"></td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>1-2 of 2</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Contracts.vue > Should show the loading message when empty contracts list 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" sort-desc="true" item-key="address">
        <!---->
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sortable v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Deployed On</span><i class="mdi-arrow-down mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span></span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table-rows-no-data">
                <td colspan="5"> No contracts found </td>
              </tr>
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>0-0 of 0</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
